# project_future_projection

rnd/: FORECASTING_MODEL_README.md  Forecasting.ipynb  MetaPipeline.ipynb  SETUP_AND_EXECUTION_GUIDE.md  chennai_1.5_5_star_monthly_data.csv  data_processing.py  final_forecasting_model.py  forecasting_and_outputs.ipynb  forecasting_and_outputs.py  main.py  model_pipelines.py  notebook.ipynb  pyproject.toml  regional_models_analysis.ipynb  regional_models_analysis.py  regression.ipynb  run_pipelines.py  sales_aggregation.py  segment_models_analysis.ipynb  segment_models_analysis.py  ts.ipynb
rnd/Notebooks/: Combined_Location_Analysis.ipynb  Cross_Location_Model_Analysis.ipynb  EDA.ipynb  Ensemble_Analysis.ipynb  MetaPipeline v1.ipynb  Multi_Model_Forecasting.ipynb  Pred.ipynb  Weather_data.ipynb  multi_segment_ensemble_training.ipynb  notebook.ipynb  process_time_series.ipynb  regional_models_analysis.ipynb  regression.ipynb  weather_sales_analysis.ipynb
rnd/Weather/: chennai_1.5_5_star_monthly_data_test.csv  india_south.json
rnd/data/: monthly_sales_summary.csv
rnd/outputs/: regional_models_results.csv
rnd/regional_data/: AP_Humidify.csv  AP_Max_temp.csv  AP_Min_temp.csv  AP_Wind_Speed.csv  AP_hots_and_cold_days.csv  KA_Humidify.csv  KA_Max_temp.csv  KA_Min_temp.csv  KA_Wind_Speed.csv  KA_hots_and_cold_days.csv  KL_Humidify.csv  KL_Max_temp.csv  KL_Min_temp.csv  KL_Wind_Speed.csv  KL_hots_and_cold_days.csv  TL_Min_temp.csv  TL_Wind_Speed.csv  TL_hots_and_cold_days.csv  TN_Humidify.csv  TN_Max_temp.csv  TN_Min_temp.csv  TN_Wind_Speed.csv  TN_hots_and_cold_days.csv  TS_Humidify.csv  TS_Max_temp.csv  andhra Pradesh.md  karnataka.md  kerala.md  tamilnadu.md  telangana.md
(+63 files in other folders)
