[project]
name = "rnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "darts>=0.38.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
