[project]
name = "rnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "darts>=0.38.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "meteostat>=1.7.6",
    "nixtla>=0.7.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
